Adicionada consulta a API

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>DevStore</title>
 </head>
 <body>
+    <h1>DevStore beta</h1>
+    <div id="lista-produtos">
+
+    </div>
     
     <script src="js/script.js"></script>
 </body>
